3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for SVN:

Fix bug #1779574: can destroy outer walls in lone town apartment, level 2.
 server/build_map.c: fix can_build_over(), add missing check.
Nicolas Weeger 2007-08-23

lib/help/{fire,fire_stop}: Add help for "fire" and "fire_stop" commands.
Andreas Kirschbaum 2007-08-22

Don't display an evil error message when trying to reset a map with a player on.
 server/c_wiz.c
Nicolas Weeger 2007-08-20

Write when an item is glowing.
 common/item.c: add "glowing" to glowing items.
 types/legacy/legacy_describe.c: LAMP have some description, too.
Nicolas Weeger 2007-08-20

Fix item update on ground. Factorize code. Add increase_ob_nr() function.
 include/libproto.h
 common/object.c
Nicolas Weeger 2007-08-18

Various small fixes.
 common/exp.c: fix comment.
 include/plugin.h: make fname const char*.
 server/c_party.c: say something if no parameter to gsay.
 server/c_wiz.c: remove some useless tests.
 server/init.c: make get_racelink() abort() if memory failure.
 server/monster.c: fix comment.
Nicolas Weeger 2007-08-16

Fix spurious function replace_insert_ob_in_map(), document it.
Implement unit test for that.
 common/object.c
 test/unit/common/check_object.c
Nicolas Weeger 2007-08-16

Partial fix for #1772759: Too much alchemy causes client crash.
 common/object.c: correctly send/remove object when in container the player is
  looking into.
Nicolas Weeger 2007-08-12

Fix plugin documentation, add some .ps version made from the wiki.
This fixes bug #1537236: cfpython 2.0 - documentation missing.
 doc/plugins
 doc/Developers/Makefile.am plugins python README
Added files:
 doc/Developers/plugins.ps python.ps
Nicolas Weeger 2007-08-12
